--- a/css/geral.css
+++ b/css/geral.css
@@ -49,13 +49,6 @@ body {
   letter-spacing: .1em;
 }
 
-.seta {
-  display: inline-block;
-  border-left: 8px solid black;
-  border-top: 4px solid transparent;
-  border-bottom: 4px solid transparent;
-}
-
 .grid-section {
   grid-column: 2 / 4;
   width: 100%;
@@ -182,7 +175,7 @@ body {
 }
 
 .copy {
-  grid-column: 3 / 5;
+  grid-column: 3/5;
   margin-bottom: 2rem;
   background: #FB5;
 }
@@ -193,8 +186,36 @@ body {
   font-weight: bold;
 }
 
+@media (max-width: 700px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+  }
+  .menu, .grid-section, .copy {
+    grid-column: 1;
+  }
+  .grid-section {
+    grid-template-columns: 100px 1fr;
+    grid-gap: 10px;
+  }
+  .animais-lista {
+    grid-column: 1;
+  }
+  .faq-lista, .dados, .mapa {
+    grid-column: 1 / 3;
+  }
+  .grid-section h1 {
+    font-size: 2.5rem;
+  }
+  .menu {
+    margin-top: 0px;
+  }
+  .copy {
+    margin-bottom: 0px;
+  }
+}
+
 .js [data-tab="content"] section {
-  display: none; 
+  display: none;
 }
 
 [data-tab="content"] section.ativo {
@@ -237,16 +258,18 @@ body {
 
 [data-anime="accordion"] dt::after {
   content: '';
+  width: 10px;
+  height: 10px;
   display: inline-block;
+  background: url('../img/arrow-red.svg') no-repeat center center;
   margin-left: 10px;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-bottom: 9px solid #E54;
+  transform: rotate(90deg);
+  transition: transform .3s;
 }
 
 [data-anime="accordion"] dt.ativo::after {
   content: '';
-  transform: rotate(-180deg);
+  transform: rotate(-90deg);
 }
 
 [data-anime="accordion"] dd.ativo {
@@ -276,30 +299,31 @@ body {
   transform: translate3d(0, 0, 0);
 }
 
-@media (max-width: 700px) {
-  .grid-container {
-    grid-template-columns: 1fr;
-  }
-  .menu, .grid-section, .copy {
-    grid-column: 1;
-  }
-  .grid-section {
-    grid-template-columns: 100px 1fr;
-    grid-gap: 10px;
-  }
-  .animais-lista {
-    grid-column: 1;
-  }
-  .faq-lista, .dados, .mapa {
-    grid-column: 1 / 3;
-  }
-  .grid-section h1 {
-    font-size: 2.5rem;
-  }
-  .menu {
-    margin-top: 0px;
-  }
-  .copy {
-    margin-bottom: 0px;
-  }
+[data-semana]::after {
+  display: inline-block;
+  content: '';
+  width: 6px;
+  height: 6px;
+  background: #E54;
+  border-radius: 50%;
+  margin-left: 4px;
+  border: 2px solid #000;
+}
+
+[data-semana].aberto::after {
+  background: #3F4;
+}
+
+.btc-preco {
+  background: #3F4;
+  padding: .2rem .5rem;
+  font-weight: bold;
+  border-radius: 2px;  
+}
+
+.arrow-black {
+  background: url('../img/arrow-black.svg') no-repeat center center;
+  display: inline-block;
+  width: 8px;
+  height: 10px;
 }
