--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
 @import 'modal.css';
 @import 'tooltip.css';
 @import 'dropdown-menu.css';
-@import 'menuMobile.css';
+@import 'menu-mobile.css';
 @import 'numeros.css';
-@import 'horarioFunc.css';
 @import 'slide.css';
